[package]
name = "gfx-final-project"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "0.19"
winit = "0.29"
env_logger = "0.11"
pollster = "0.3"
encase = { version = "0.8.0", features = ["glam"] }
glam = "0.27"
#geometric_algebra = "0.3"
geometric_algebra = { path = "geometric_algebra" }
rand = "0.8"
const_format = "0.2"